--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>D. Lee | Mathematics</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Academic website of D. Lee.">
+  <meta name="description" content="Academic website of Donghae Lee.">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,7 +14,7 @@
     <!-- Header: Name + Photo + Intro -->
     <header class="header">
       <div class="header-left">
-        <h1 class="name">D. Lee</h1>
+        <h1 class="name">Donghae Lee</h1>
         <p class="affiliation">
           PhD Student in Mathematics<br>
           Harvard University
@@ -24,8 +24,7 @@
         </p>
         <p class="intro">
           I am a mathematics PhD student working in symplectic geometry and
-          Homological Mirror Symmetry. My interests include Fukaya categories,
-          Floer theory, microlocal sheaf theory, and geometric aspects of HMS.
+          Homological Mirror Symmetry.
         </p>
       </div>
 
