--- a/index.html
+++ b/index.html
@@ -2,37 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>D. Lee | Mathematics</title>
+  <title>Donghae Lee</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Academic website of Donghae Lee.">
+  <meta name="description" content="Academic website of D. Lee.">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="container">
+  <div class="page">
 
-    <!-- Header: Name + Photo + Intro -->
+    <!-- Header -->
     <header class="header">
-      <div class="header-left">
-        <h1 class="name">Donghae Lee</h1>
-        <p class="affiliation">
-          PhD Student in Mathematics<br>
-          Harvard University
-        </p>
-        <p class="contact">
-          <a href="mailto:your-email@math.harvard.edu">your-email@math.harvard.edu</a>
-        </p>
-        <p class="intro">
-          I am a mathematics PhD student working in symplectic geometry and
-          Homological Mirror Symmetry.
+      <h1 class="name">Donghae Lee</h1>
+      <p class="affiliation">
+        PhD Student in Mathematics<br>
+        Harvard University
+      </p>
+      <p class="contact">
+        <a href="mailto:your-email@math.harvard.edu">your-email@math.harvard.edu</a> ·
+        <a href="cv.pdf">CV</a>
+      </p>
+    </header>
+
+    <!-- Intro Section -->
+    <section class="intro-section">
+      <div class="intro-text">
+        <h2>About</h2>
+        <p>
+          I am a first year PhD student in mathematics at Harvard University.
         </p>
       </div>
 
-      <div class="header-right">
-        <!-- Replace with the actual file, e.g. img/profile.jpg -->
+      <div class="intro-photo">
         <img src="profile.jpg" alt="D. Lee" class="profile-photo">
       </div>
-    </header>
+    </section>
 
     <hr>
 
@@ -41,10 +45,7 @@
       <h2>Research Interests</h2>
       <ul>
         <li>Symplectic geometry and Lagrangian Floer theory</li>
-        <li>Homological Mirror Symmetry (toric, SYZ, and non-toric)</li>
-        <li>Fukaya categories and categorical structures</li>
-        <li>Microlocal sheaf theory and FLTZ skeleta</li>
-        <li>Deformation theory and homological algebra</li>
+        <li>Homological Mirror Symmetry</li>
       </ul>
     </section>
 
@@ -53,27 +54,15 @@
     <!-- Publications -->
     <section id="publications">
       <h2>Publications</h2>
-
-      <p class="pub-note">(* denotes alphabetical ordering.)</p>
+      <p class="small-note">(* denotes alphabetical ordering.)</p>
 
       <ul class="pub-list">
-
         <li class="pub-item">
-          <span class="pub-title"><strong>Title of Your Paper</strong></span><br>
+          <span class="pub-title"><strong>Title of your paper</strong></span><br>
           <span class="pub-authors">D. Lee*, Coauthor Name</span><br>
           <span class="pub-venue">arXiv:XXXX.XXXXX, 2025.</span><br>
-          <a href="#">PDF</a> | <a href="#">arXiv</a> | <a href="#">Slides</a>
+          <span class="pub-links"><a href="#">PDF</a> · <a href="#">arXiv</a></span>
         </li>
-
-        <!-- Copy and paste this structure for more papers
-        <li class="pub-item">
-          <span class="pub-title"><strong>Another Paper Title</strong></span><br>
-          <span class="pub-authors">D. Lee</span><br>
-          <span class="pub-venue">Preprint, 2025.</span><br>
-          <a href="#">PDF</a>
-        </li>
-        -->
-
       </ul>
     </section>
 
@@ -82,15 +71,12 @@
     <!-- Notes -->
     <section id="notes">
       <h2>Notes and Talks</h2>
-
       <ul class="note-list">
         <li>
-          <strong>Title of a Note or Talk</strong><br>
-          <span class="note-meta">Seminar Name, Institution, Month Year</span><br>
+          <strong>Title of notes or talk</strong><br>
+          <span class="note-meta">Seminar name, institution, month year</span><br>
           <a href="#">PDF</a>
         </li>
-
-        <!-- More notes here -->
       </ul>
     </section>
 
@@ -98,29 +84,24 @@
 
     <!-- Undergraduate Work -->
     <section id="undergrad">
-      <h2>Undergraduate Works</h2>
-
+      <h2>Undergraduate Work</h2>
       <ul class="ug-list">
         <li>
-          <strong>Undergraduate Thesis Title</strong><br>
-          Advisor: Professor Name<br>
-          <a href="#">PDF</a>
+          <strong>Undergraduate thesis title</strong><br>
+          Advisor: Professor Name, Institution<br>
+          <a href="#">Thesis PDF</a>
         </li>
-
         <li>
-          <strong>Selected Undergraduate Projects</strong>
+          <strong>Selected Projects</strong>
           <ul>
-            <li>Project title 1 [<a href="#">PDF</a>]</li>
-            <li>Project title 2 [<a href="#">PDF</a>]</li>
-            <li>Project title 3 [<a href="#">PDF</a>]</li>
+            <li>Project 1 [<a href="#">PDF</a>]</li>
+            <li>Project 2 [<a href="#">PDF</a>]</li>
+            <li>Project 3 [<a href="#">PDF</a>]</li>
           </ul>
         </li>
       </ul>
     </section>
 
-    <hr>
-
-    <!-- Footer -->
     <footer class="footer">
       <p>Last updated: January 2026</p>
     </footer>
