--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header class="header">
       <h1 class="name">Donghae Lee</h1>
       <p class="affiliation">
-        PhD Student in Mathematics<br>
+        Ph.D. Student in Mathematics<br>
         Harvard University
       </p>
       <p class="contact">
-        <a href="mailto:your-email@math.harvard.edu">your-email@math.harvard.edu</a> ·
+        <a href="mailto:dlee@math.harvard.edu">dlee@math.harvard.edu</a> ·
         <a href="cv.pdf">CV</a>
       </p>
     </header>
@@ -34,7 +34,7 @@
       </div>
 
       <div class="intro-photo">
-        <img src="profile.jpg" alt="D. Lee" class="profile-photo">
+        <img src="profile.jpg" alt="Donghae Lee" class="profile-photo">
       </div>
     </section>
 
