--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- Notes -->
     <section id="notes">
-      <h2>Notes and Talks</h2>
+      <h2>Notes</h2>
       <ul class="note-list">
         <li>
           <strong>Title of notes or talk</strong><br>
@@ -84,7 +84,7 @@
 
     <!-- Undergraduate Work -->
     <section id="undergrad">
-      <h2>Undergraduate Work</h2>
+      <h2>Some Undergraduate Works</h2>
       <ul class="ug-list">
         <li>
           <strong>Undergraduate thesis title</strong><br>
