--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="intro-photo">
-        <img src="profile.jpg" alt="Donghae Lee" class="profile-photo">
+        <img src="profile.JPG" alt="Donghae Lee" class="profile-photo">
       </div>
     </section>
 
