--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="intro-section">
       <div class="intro-text">
         <p>
-          I am a first year PhD student in mathematics at Harvard University.
+          I am a first year PhD student in mathematics at Harvard University. I'm broadly interested in symplectic geometry and topology, especially homological mirror symmetry. Before that, I was an undergraduate student in Seoul National University, in South Korea.
         </p>
       </div>
 
