--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Donghae Lee</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex, nofollow">
   <meta name="description" content="Academic website of D. Lee.">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -28,7 +29,7 @@
     <section class="intro-section">
       <div class="intro-text">
         <p>
-          I am a first year PhD student in mathematics at Harvard University. I'm broadly interested in symplectic geometry and topology, especially homological mirror symmetry. Before that, I was an undergraduate student in Seoul National University, in South Korea.
+          I am a first year Ph.D. student in mathematics at Harvard University. I'm broadly interested in symplectic geometry and topology, especially homological mirror symmetry. Before that, I was an undergraduate student in Seoul National University.
         </p>
       </div>
 
@@ -102,7 +103,7 @@
     </section>
 
     <footer class="footer">
-      <p>Last updated: January 2026</p>
+      <p>Last updated: December 2025</p>
     </footer>
 
   </div>
