--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="intro-section">
       <div class="intro-text">
         <p>
-          I am a first year Ph.D. student in mathematics at Harvard University. I'm broadly interested in symplectic geometry and topology, especially homological mirror symmetry. Before that, I was an undergraduate student in Seoul National University.
+          I am a first year Ph.D. student in mathematics at Harvard University, advised by <a href="https://people.math.harvard.edu/~auroux/">Denis Auroux</a>. I'm broadly interested in symplectic geometry and topology, especially homological mirror symmetry. Before that, I was an undergraduate student in Seoul National University.
         </p>
       </div>
 
