--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="referrer" content="no-referrer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <meta name="description" content="Academic website of D. Lee.">
+  <meta name="description" content="Academic website of Donghae Lee.">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -30,7 +30,7 @@
     <section class="intro-section">
       <div class="intro-text">
         <p>
-          I am a first year Ph.D. student in mathematics at Harvard University, advised by <a href="https://people.math.harvard.edu/~auroux/">Denis Auroux</a>. I'm broadly interested in symplectic geometry and topology, especially homological mirror symmetry. Before that, I was an undergraduate student in Seoul National University.
+          I am a first year Ph.D. student in mathematics at <a href="https://www.math.harvard.edu">Harvard University</a>, advised by <a href="https://people.math.harvard.edu/~auroux/">Denis Auroux</a>. I'm broadly interested in symplectic geometry and topology, especially homological mirror symmetry. Before that, I was an undergraduate student in Seoul National University.
         </p>
       </div>
 
@@ -59,10 +59,9 @@
 
       <ul class="pub-list">
         <li class="pub-item">
-          <span class="pub-title"><strong>Title of your paper</strong></span><br>
-          <span class="pub-authors">D. Lee*, Coauthor Name</span><br>
-          <span class="pub-venue">arXiv:XXXX.XXXXX, 2025.</span><br>
-          <span class="pub-links"><a href="#">PDF</a> · <a href="#">arXiv</a></span>
+          <span class="pub-title"><strong>Surface Quotients of Right-angled Hyperbolic Buildings</strong></span><br>
+          <span class="pub-venue">arXiv:2410.10281, 2024.</span><br>
+          <span class="pub-links"><a href="Surface Quotients of Right-Angled Hyperbolic Buildings.pdf">PDF</a> · <a href="https://arxiv.org/abs/2410.10281">arXiv</a></span>
         </li>
       </ul>
     </section>
