--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <ul class="pub-list">
   <li>
-    [1] <strong>Surface Quotients of Right-angled Hyperbolic Buildings</strong>, arXiv:2410.10281 (2024)
+    [1] <strong>Surface Quotients of Right-angled Hyperbolic Buildings</strong>, preprint under review (2024)
     [<a href="Surface Quotients of Right-Angled Hyperbolic Buildings.pdf">PDF</a>] [<a href="https://arxiv.org/abs/2410.10281">arXiv</a>]
   </li>
       </ul>
@@ -70,11 +70,11 @@
     <!-- Notes -->
     <section id="notes">
       <h2>Notes</h2>
+      <p> I am preparing a note on analytic techniques for J-holomorphic curves following McDuff–Salamon. The file posted here is a handwritten note for a <a href="https://sites.google.com/view/qsms-bk21-symplectic-seminar/home">reading seminar</a>, written during my undergraduate studies. I also have additional handwritten notes on J-holomorphic curves and Lagrangian Floer theory that are not uploaded anywhere; however, the scanned versions are not of high quality. Please contact me if you would like access to them. </p>
       <ul class="note-list">
         <li>
-          <strong>Title of notes or talk</strong><br>
-          <span class="note-meta">Seminar name, institution, month year</span><br>
-          <a href="#">PDF</a>
+      <strong>Gluing Theorem</strong>,
+      QSMS-BK21 symplectic reading seminar (2025) [<a href="fukaya_notes.pdf">PDF</a>]
         </li>
       </ul>
     </section>
