--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@
     <!-- Publications -->
     <section id="publications">
       <h2>Publications</h2>
-      <p class="small-note">(* denotes alphabetical ordering.)</p>
-
       <ul class="pub-list">
   <li>
     [1] <strong>Surface Quotients of Right-angled Hyperbolic Buildings</strong>, preprint under review (2024)
@@ -70,11 +68,11 @@
     <!-- Notes -->
     <section id="notes">
       <h2>Notes</h2>
-      <p> I am preparing a note on analytic techniques for J-holomorphic curves following McDuff–Salamon. The file posted here is a handwritten note for a <a href="https://sites.google.com/view/qsms-bk21-symplectic-seminar/home">reading seminar</a>, written during my undergraduate studies. I also have additional handwritten notes on J-holomorphic curves and Lagrangian Floer theory that are not uploaded anywhere; however, the scanned versions are not of high quality. Please contact me if you would like access to them. </p>
+      <p> I am preparing a note on analytic techniques for J-holomorphic curves following McDuff–Salamon. The file posted here is a handwritten note for a <a href="https://sites.google.com/view/qsms-bk21-symplectic-seminar/home">reading seminar</a>, written during my undergraduate studies. I also have additional handwritten notes from that seminar,  on J-holomorphic curves and Lagrangian Floer theory, which are not uploaded anywhere; however, the scanned versions are not of high quality. Please contact me if you would like access to them. </p>
       <ul class="note-list">
         <li>
       <strong>Gluing Theorem</strong>,
-      QSMS-BK21 symplectic reading seminar (2025) [<a href="fukaya_notes.pdf">PDF</a>]
+      QSMS-BK21 symplectic reading seminar (2025) [<a href="Gluing theorem.pdf">PDF</a>]
         </li>
       </ul>
     </section>
