--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     <!-- Notes -->
     <section id="notes">
       <h2>Notes</h2>
-      <p class="note-extra"> I am preparing a note on analytic techniques for J-holomorphic curves following McDuff–Salamon. The file posted here is a handwritten note for a <a href="https://sites.google.com/view/qsms-bk21-symplectic-seminar/home">reading seminar</a>, written during my undergraduate studies. I also have additional handwritten notes from that seminar,  on J-holomorphic curves and Lagrangian Floer theory, which are not uploaded anywhere; however, the scanned versions are not of high quality. Please contact me if you would like access to them. </p>
+      <p> I am preparing a note on analytic techniques for J-holomorphic curves following McDuff–Salamon. </p>
+      <p class="note-extra">The file posted here is a handwritten note for a <a href="https://sites.google.com/view/qsms-bk21-symplectic-seminar/home">reading seminar</a>, written during my undergraduate studies. I also have additional handwritten notes from that seminar,  on J-holomorphic curves and Lagrangian Floer theory, which are not uploaded anywhere; however, the scanned versions are not of high quality. Please contact me if you would like access to them. </p>
       <ul class="note-list">
         <li>
       <strong>Gluing Theorem</strong>,
@@ -84,17 +85,7 @@
       <h2>Some Undergraduate Works</h2>
       <ul class="ug-list">
         <li>
-          <strong>Undergraduate thesis title</strong><br>
-          Advisor: Professor Name, Institution<br>
-          <a href="#">Thesis PDF</a>
-        </li>
-        <li>
-          <strong>Selected Projects</strong>
-          <ul>
-            <li>Project 1 [<a href="#">PDF</a>]</li>
-            <li>Project 2 [<a href="#">PDF</a>]</li>
-            <li>Project 3 [<a href="#">PDF</a>]</li>
-          </ul>
+          <Strong>Surface Quotients of Right-angled Hyperbolic Buildins</Strong>, Seoul National University (2024) [<a href="Gluing theorem.pdf">Slide</a>]
         </li>
       </ul>
     </section>
