--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
     <!-- Notes -->
     <section id="notes">
       <h2>Notes</h2>
-      <p> I am preparing a note on analytic techniques for J-holomorphic curves following McDuff–Salamon. </p>
-      <p class="note-extra">The file posted here is a handwritten note for a <a href="https://sites.google.com/view/qsms-bk21-symplectic-seminar/home">reading seminar</a>, written during my undergraduate studies. I also have additional handwritten notes from that seminar,  on J-holomorphic curves and Lagrangian Floer theory, which are not uploaded anywhere; however, the scanned versions are not of high quality. Please contact me if you would like access to them. </p>
+      <p class="note-extra">I am preparing a note on analytic techniques for J-holomorphic curves following McDuff–Salamon. The file posted here is a handwritten note for a <a href="https://sites.google.com/view/qsms-bk21-symplectic-seminar/home">reading seminar</a>, written during my undergraduate studies. I also have additional handwritten notes from that seminar,  on J-holomorphic curves and Lagrangian Floer theory, which are not uploaded anywhere; however, the scanned versions are not of high quality. Please contact me if you would like access to them. </p>
       <ul class="note-list">
         <li>
       <strong>Gluing Theorem</strong>,
@@ -83,9 +82,12 @@
     <!-- Undergraduate Work -->
     <section id="undergrad">
       <h2>Some Undergraduate Works</h2>
-      <ul class="ug-list">
+      <p class="note-extra"> These are selected undergraduate works which is conducted in Seoul National University.
+      <ul class="note-list">
         <li>
-          <Strong>Surface Quotients of Right-angled Hyperbolic Buildins</Strong>, Seoul National University (2024) [<a href="Gluing theorem.pdf">Slide</a>]
+          <Strong>Surface Quotients of Right-angled Hyperbolic Buildins</Strong>, Grad School Exchange Seminar (2024) [<a href="Representation up to homotopy of Lie groupoid.pdf">Slide</a>]
+          <Strong>Representation up to Homotopy of Lie Groupoids</Strong>, SNU Graduate Course: Topics in Topology (2024) [<a href="Gluing theorem.pdf">Slide</a>]
+          <Strong>Dynamical Approaches to Littlewood's Conjecture</Strong>, SNU Graduate Course: Topics in Topology (2023) [<a href="Littlewood's Conjecture.pdf">Slide</a>]
         </li>
       </ul>
     </section>
