--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
     <!-- Undergraduate Work -->
     <section id="undergrad">
       <h2>Some Undergraduate Works</h2>
-      <p class="note-extra"> These are selected undergraduate works which is conducted in Seoul National University.
+      <p class="note-extra"> These are selected undergraduate works completed at Seoul National University.</p>
       <ul class="note-list">
         <li>
           <Strong>Surface Quotients of Right-angled Hyperbolic Buildins</Strong>, Grad School Exchange Seminar (2024) [<a href="Representation up to homotopy of Lie groupoid.pdf">Slide</a>]
-          <Strong>Representation up to Homotopy of Lie Groupoids</Strong>, SNU Graduate Course: Topics in Topology (2024) [<a href="Gluing theorem.pdf">Slide</a>]
+          <Strong>Representation up to Homotopy of Lie Groupoids</Strong>, SNU Graduate Course: Topics in Topology (2024) [<a href="Surface Quotients_presentation.pdf">Slide</a>]
           <Strong>Dynamical Approaches to Littlewood's Conjecture</Strong>, SNU Graduate Course: Topics in Topology (2023) [<a href="Littlewood's Conjecture.pdf">Slide</a>]
         </li>
       </ul>
