--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </p>
       <p class="contact">
         <a href="mailto:dlee@math.harvard.edu">dlee@math.harvard.edu</a> ·
-        <a href="cv.pdf">CV</a>
+        <a href="CV_2025.pdf">CV</a>
       </p>
     </header>
 
