--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!-- Notes -->
     <section id="notes">
       <h2>Notes</h2>
-      <p class="note-extra">I am preparing a note on analytic techniques for J-holomorphic curves following McDuff–Salamon. The file posted here is a handwritten note for a <a href="https://sites.google.com/view/qsms-bk21-symplectic-seminar/home">reading seminar</a>, written during my undergraduate studies. I also have additional handwritten notes from that seminar,  on J-holomorphic curves and Lagrangian Floer theory, which are not uploaded anywhere; however, the scanned versions are not of high quality. Please contact me if you would like access to them. </p>
+      <p class="note-extra">I am preparing a note on analytic techniques for J-holomorphic curves following McDuff–Salamon. The file posted here is a handwritten note for a <a href="https://sites.google.com/view/qsms-bk21-symplectic-seminar/home">reading seminar</a>, written during my undergraduate studies. I also have additional handwritten notes for that seminar,  on J-holomorphic curves and Lagrangian Floer theory, which are not uploaded anywhere; however, the scanned versions are not of high quality. Please contact me if you would like access to them. </p>
       <ul class="note-list">
         <li>
       <strong>Gluing Theorem</strong>,
